try hash in link fir hash router

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://hugobabinhio.github.io/domaineduharasdelachaine",
-  "name": "harasdelachainedomain",
+  "name": "domaineduharasdelachaine",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
