--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "domaineduharasdelachaine",
-  "homepage": "https://hugobabinhio.github.io/domaineduharasdelachaine",
+  "homepage": "https://domaineduharasdelachaine.fr",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
